# pleak-sql-analysis

./: .gitignore  .gitmodules  README.md  modules_description.txt  pleak-sql-analysis.cabal  stack.yaml
banach/: Aexpr.hs  AexprQ.hs  Banach.hs  BanachQ.hs  CreateTablesQ.hs  DatabaseQ.hs  ErrorMsg.hs  Expr.hs  ExprQ.hs  GroupQ.hs  LoggingQ.hs  Main.hs  Norms.hs  NormsQ.hs  Parser.hs  ParserQ.hs  PolicyQ.hs  PostprocessQ.hs  Preprocess.hs  PreprocessQ.hs  ProgramOptions.hs  Query.hs  QueryQ.hs  README  README.md  RangeUtils.hs  ReaderQ.hs  SchemaQ.hs  SelectQueryQ.hs  TimeSeriesQ.hs  VarstateQ.hs  attributes.db  attributes.nrm  berth.db  berth.nrm  bigquery.sql  build.sh  cat.db  cat.nrm  cat_attacker.att  (+134 more)
banach/ToySolver/Combinatorial/: BipartiteMatching.hs
banach/examples/: README  sqlsa-quiet
banach/examples/asymptotic-nonunique-join/: description.txt
banach/examples/banach-asymptotic-count-query-with-sigmoid-with-generated-input/: description.txt  genOneExample
banach/examples/banach-asymptotic-with-integer-filter/: description.txt  runtests
banach/examples/banach-asymptotic-with-sigmoid/: description.txt
banach/examples/banach-asymptotic-with-sigmoid-with-generated-input/: runtests
banach/examples/banach-asymptotic-with-two-sigmoids-with-generated-input/: GenerateExample.hs  Makefile  genExamples
banach/examples/components-of-combined-sensitivity/: description.txt  runtests
banach/examples/components-of-combined-sensitivity-with-filter/: description.txt  runtests
banach/lightweight-examples/TCP-H/: README.txt  bench10.sql  bench11.sql  bench12_1.sql  bench12_2.sql  bench16.sql  bench17.sql  bench18.sql  bench19.sql  bench1_1.sql  bench1_2.sql  bench1_3.sql  bench1_4.sql  bench1_5.sql  bench2.sql  bench2_2.sql  bench3.sql  bench4.sql  bench5.sql  bench6.sql  bench7.sql  bench8.sql  bench9.sql  customer.db  customer.nrm  demo.sh  demoNoTableUpdate.sh  lineitem.nrm  nations.db  orders.db  orders.nrm  orders0.01.tbl  part.db  part.nrm  partsupp.db  partsupp.nrm  partsupp0.01.tbl  preprocess.py  region.db  supplier.db  (+8 more)
banach/lightweight-examples/cats/: _combined_sensitivity.tmp  cat.db  cat.nrm  cat_constraints.txt  cat_group_query.sql  cat_many_group_query.sql  cat_query.sql  cat_schema.sql  demo.sh  demo2.sh  test.sh  test_result.txt  test_script.sh
banach/lightweight-examples/pandemic/: community.db  community.nrm  demo.sh  demo2.sh  nation.db  nation.nrm  pandemic_attacker_goal.sql  pandemic_constraints.txt  pandemic_constraints_simple.att  pandemic_groupquery.sql  pandemic_query.sql  pandemic_schema.sql  person.db  person2diseaseriskfactor.db  person2diseaseriskfactor.nrm  person2diseasestate.db  policyauthority.db  policyauthority2community.db  test.sh  testNoTableUpdate.sh  test_result.txt  (+1 more)
docs/: Bag.hs  Syntax.hs  test.smt2  test2.smt2  test3.smt2
example/: demoquery1.sql  demoschema1.sql  localquery1.sql  localquery12.sql  localquery2.sql  localquery3.sql  localquery4.sql  localquery5.sql  localschema.sql  query.sql  query2.sql  query3.sql  query_bigsensitivity.sql  query_coalitions.sql  query_except.sql  schema.sql  schema2.sql  schema2alt.sql  schema3.sql  schema_bigsensitivity.sql  schema_coalitions.sql  schema_except.sql
globalsensitivity-cabal/: README  README.md  sensitivity-analysis-global.cabal
globalsensitivity-cabal/src/: LocalSensitivity.hs  Main.hs  ProgramOptions.hs  Schema.hs  Z3Bridge.hs
localsensitivity-cabal/: README  README.md  sensitivity-analysis-smooth.cabal
localsensitivity-cabal/src/: LocalSensitivity.hs  Logging.hs  Main.hs  ProgramOptions.hs  Schema.hs  SelectQuery.hs  Z3Bridge.hs
src/: Bag.hs  Catalog.hs  LocalSensitivity-NonSmooth.hs  LocalSensitivity.hs  Logging.hs  Main.hs  Multiplicity.hs  ProgramOptions.hs  Schema.hs  SelectQuery.hs  Syntax.hs  Z3Bridge.hs
(+169 files in other folders)
