name:           pleak-sql-analysis
version:        0.0.1
synopsis:       SQL analysis tool for pleak.io
license:        AllRightsReserved
author:         Jaak Randmets
maintainer:     jaak.randmets@cyber.ee
category:       Static Analysis
build-type:     Simple
cabal-version:  >= 1.10

executable sqla
  main-is:              Main.hs
  ghc-options:          -Wall -O1
  build-depends:        base, hssqlppp, text
  hs-source-dirs:       src
  default-language:     Haskell2010
