name:           pleak-sql-analysis
version:        0.0.1
synopsis:       SQL analysis tool for pleak.io
license:        AllRightsReserved
author:         Jaak Randmets
maintainer:     jaak.randmets@cyber.ee
category:       Static Analysis
build-type:     Simple
cabal-version:  >= 1.10

executable sqla
  main-is:              Main.hs
  ghc-options:          -Wall -Wno-name-shadowing -O0
  build-depends:        base >= 4.9,
                        array,
                        hssqlppp, text, groom,
                        uniplate, optparse-applicative,
                        containers, process, async
  hs-source-dirs:       src
  other-modules:        Catalog, Schema, Logging, SelectQuery, Z3Bridge, LocalSensitivity, ProgramOptions
  default-language:     Haskell2010
