name:           sensitivity-analysis-global
version:        0.0.1
synopsis:       SQL analysis tool for global sensitivity
license:        AllRightsReserved
author:         Martin Pettai, Jaak Randmets
maintainer:     -
category:       Static Analysis
build-type:     Simple
cabal-version:  >= 1.10

executable sqla
  main-is:              Main.hs
  ghc-options:          -Wall -fwarn-name-shadowing -O0
  build-depends:        base >= 4.8.2,
                        array,
                        hssqlppp == 0.6.1, text, groom,
                        uniplate, optparse-applicative, semigroups,
                        containers, process, async,
                        HDBC, HDBC-postgresql
  hs-source-dirs:       src
  other-modules:        Catalog, Schema, Logging, SelectQuery, Z3Bridge, LocalSensitivity, ProgramOptions
  default-language:     Haskell2010
