name:           sensitivity-analysis-smooth
version:        0.0.1
synopsis:       SQL analysis tool for smooth sensitivity
license:        AllRightsReserved
author:         Martin Pettai, Jaak Randmets
maintainer:     -
category:       Static Analysis
build-type:     Simple
cabal-version:  >= 1.10

executable sqlsa
  main-is:              Main.hs
  ghc-options:          -Wall -fwarn-name-shadowing -O0
  build-depends:        base >= 4.8.2,
                        array,
                        hssqlppp, text, groom,
                        uniplate, optparse-applicative, semigroups,
                        containers, process, async
  hs-source-dirs:       src
  other-modules:        Catalog, Schema, Logging, SelectQuery, LocalSensitivity, ProgramOptions
  default-language:     Haskell2010
